--- a/002-oxfordUni.html
+++ b/002-oxfordUni.html
@@ -31,10 +31,10 @@
             <div class="AdmisssionProgress">
                 <h4>Admission Progress</h4>
                 <div class="row">
-                    <div class="col-3">1. Fill in Application</div>
-                    <div class="col-2">2. Verify Data</div>
-                    <div class="col-4">3. Print Application Form</div> 
-                    <div class="col-2">4. Login</div> 
+                    <div class="col-sm-3">1. Fill in Application</div>
+                    <div class="col-sm-2">2. Verify Data</div>
+                    <div class="col-sm-4">3. Print Application Form</div> 
+                    <div class="col-sm-2">4. Login</div> 
                 </div>
                 <div class="progress" style="height: 20px;">
                     <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -68,11 +68,11 @@
                 <div class="form-group row">
                     <label for="Gender" class="col-sm-2 col-form-label">Gender:</label>
                     <div class="col-sm-5">
-                        <div class="form-check form-check-inline">
+                        <div class="form-check form-check-inline col-sm-3">
                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Male" value="option1">
                             <label class="form-check-label" for="Male">Male</label>
                         </div>
-                        <div class="form-check form-check-inline">
+                        <div class="form-check form-check-inline col-sm-5">
                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Female" value="option2">
                             <label class="form-check-label" for="Female">Female</label>
                         </div>
@@ -100,11 +100,11 @@
                 <div class="form-group row">
                     <label for="StudyIn" class="col-sm-2 col-form-label">Study in:</label>
                     <div class="col-sm-5">
-                        <div class="form-check form-check-inline">
+                        <div class="form-check form-check-inline col-sm-5">
                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Myanmar" value="option1">
                             <label class="form-check-label" for="Myanmar">Myanmar</label>
                         </div>
-                        <div class="form-check form-check-inline">
+                        <div class="form-check form-check-inline col-sm-5">
                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Abroad" value="option2" disabled>
                             <label class="form-check-label" for="Abroad">Abroad</label>
                         </div>
@@ -350,8 +350,8 @@
                 </div>
                 <div class="form-group row">
                     <label for="Status" class="col-sm-2 col-form-label">Status:</label>
-                    <div class="col-sm-5">
-                        <div class="form-check form-check-inline">
+                    <div class="col-sm-8">
+                        <div class="form-check form-check-inline col-sm-3">
                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Living" value="option1">
                             <label class="form-check-label" for="Living">Living</label>
                         </div>
@@ -464,8 +464,8 @@
                 </div>
                 <div class="form-group row">
                     <label for="Status2" class="col-sm-2 col-form-label">Status:</label>
-                    <div class="col-sm-5">
-                        <div class="form-check form-check-inline">
+                    <div class="col-sm-8">
+                        <div class="form-check form-check-inline col-sm-3">
                             <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Living2" value="option1">
                             <label class="form-check-label" for="Living2">Living</label>
                         </div>
@@ -477,9 +477,10 @@
                 </div>
                 <div class="form-group row">
                     <label for="Age2" class="col-sm-2 col-form-label">Age:</label>
-                    <div class="col-sm-1">
-                        <input type="text" class="form-control" id="Age2">year
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control col-sm-1" id="Age2">
                     </div>
+                    <div class="col-sm-2">year</div>
                 </div>
                 <div class="form-group row">
                     <label for="Occupation2" class="col-sm-2 col-form-label">Occupation:</label>
@@ -553,16 +554,16 @@
             <h4>Guardian's Information</h4>
             <div class="row">
                 <label for="Status" class="col-sm-2 col-form-label">Guardian is:</label>
-                <div class="col-sm-5">
-                    <div class="form-check form-check-inline">
+                <div class="col-sm-8">
+                    <div class="form-check form-check-inline col-sm-4">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Father" value="option1">
                         <label class="form-check-label" for="Father">Father</label>
                     </div>
-                    <div class="form-check form-check-inline">
+                    <div class="form-check form-check-inline col-sm-4">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Mother" value="option2">
                         <label class="form-check-label" for="Mother">Mother</label>
                     </div>
-                    <div class="form-check form-check-inline">
+                    <div class="form-check form-check-inline col-sm-4">
                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="Other" value="option2">
                         <label class="form-check-label" for="Other">Other</label>
                     </div>
